// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `
<div>
  <div>
    An error occurred
  </div>
  <div>
    {
  "message": "An example error."
}
  </div>
</div>
`;

exports[`2. a full article with an image as the lead asset 1`] = `
Array [
  .c0 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

<style>
{
    "IS1": {
      "marginBottom": 0,
    },
  }
</style>

<div>
    <Ad
      className="IS1"
    />
  </div>,
  .c1 {
  padding-left: 10px;
  padding-right: 10px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c3 {
  font-size: 30px;
  color: #1D1D1B;
  margin-bottom: 8px;
  font-family: "TimesModern-Bold";
  font-weight: 400;
  line-height: 30px;
}

.c4 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c5 {
  margin-left: 10px;
  margin-right: 10px;
}

.c6 {
  border-top: 1px solid #DBDBDB;
}

.c7 {
  display: none;
}

.c8 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c9 {
  margin-bottom: 10px;
}

.c11 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c12 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c13 {
  padding-left: 10px;
  padding-right: 10px;
}

.c14 {
  color: #333333;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin-bottom: 25px;
  margin-top: 0;
  display: block;
}

.c15 {
  display: block;
}

.c16 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c17 {
  padding-left: 10px;
}

@media (min-width:1024px) {
  .c0 {
    padding-top: 20px;
    margin: 0 auto;
    display: block;
  }
}

@media (min-width:768px) {
  .c1 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 58.33333%;
    margin-bottom: 15px;
  }
}

@media (min-width:1024px) {
  .c2 {
    margin-top: 0px;
  }
}

@media (min-width:768px) {
  .c3 {
    font-size: 45px;
    line-height: 45px;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 83.33333333%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c4 {
    margin-bottom: 20px;
    padding-right: 20px;
    padding-left: 20px;
    position: absolute;
    left: 0;
    width: 20.8333%;
    z-index: 1;
  }
}

@media (min-width:768px) {
  .c5 {
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width:1024px) {
  .c5 {
    padding-top: 0px;
    margin-bottom: 0;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-top: 5px;
    padding-bottom: 5px;
  }
}

@media (min-width:1024px) {
  .c6 {
    line-height: 18px;
    padding-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c7 {
    display: block;
  }
}

@media (min-width:768px) {
  .c9 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c9 {
    width: 58.33333%;
    margin: 0 auto;
    padding-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c10 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:768px) {
  .c12 {
    width: 83.33333333%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c12 {
    width: 58.33333%;
  }
}

@media (min-width:768px) {
  .c13 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: 58.33333%;
  }
}

@media (min-width:768px) {
  .c14 {
    font-size: 18px;
    line-height: 30px;
  }
}

@media (min-width:768px) {
  .c15 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 58.33333%;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c17 {
    padding-left: 0px;
  }
}

<style>
{
    "IS1": {
      "color": "rgba(51,51,51,1)",
      "fontFamily": "GillSansMTStd-Medium",
      "fontSize": "12px",
      "fontWeight": "400",
      "letterSpacing": "1.2px",
    },
    "IS10": {
      "paddingBottom": "56.25%",
    },
    "IS2": {
      "justifyContent": "flex-start",
    },
    "IS3": {
      "height": "100%",
      "position": "absolute",
      "width": "100%",
    },
    "IS4": {
      "paddingBottom": "56.25%",
    },
    "IS5": {
      "color": "#333333",
      "fontFamily": "TimesDigitalW04",
      "fontSize": 17,
      "lineHeight": 26,
      "marginBottom": "25px",
      "marginTop": 0,
    },
    "IS6": {
      "paddingLeft": "10px",
      "paddingRight": "10px",
    },
    "IS7": {
      "height": "100%",
      "width": "100%",
    },
    "IS8": {
      "height": "100%",
      "width": "100%",
    },
    "IS9": {
      "height": "100%",
      "position": "absolute",
      "width": "100%",
    },
  }
</style>

<div>
    <div>
      <div>
        <div>
          <div
            className="IS1"
          >
            SOME LABEL
          </div>
        </div>
        <div>
          Some Headline
        </div>
        <div>
          Some Standfirst
        </div>
        <div>
          <div>
            <NewArticleFlag />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <ArticleBylineWithLinks />
          </span>
        </div>
        <div>
          <span>
            <DatePublication />
          </span>
        </div>
      </div>
      <div>
        <ArticleTopics
          className="IS2"
        />
      </div>
    </div>
    <div>
      <div>
        <div
          className="IS4"
        >
          <div
            className="IS3"
          >
            <Image />
          </div>
        </div>
        <div>
          <Caption />
        </div>
      </div>
    </div>
    <div>
      <div>
        <ArticleImage />
      </div>
      <Link>
        Some Link
      </Link>
      <div
        className="IS6"
      >
        <p
          className="IS5"
        >
          Some content
        </p>
      </div>
      <div>
        <div>
          <PullQuote />
        </div>
      </div>
      <div>
        <div
          className="IS10"
        >
          <div
            className="IS9"
          >
            <div
              className="IS8"
            >
              <video
                className="IS7"
              />
            </div>
          </div>
        </div>
        <div>
          <Caption />
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  padding-left: 10px;
  padding-right: 10px;
}

@media (min-width:768px) {
  .c0 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c0 {
    display: none;
  }
}

<style>
{
    "IS1": {
      "borderTopColor": "#DBDBDB",
      "borderTopWidth": 1,
    },
  }
</style>

<div>
    <ArticleTopics
      className="IS1"
    />
  </div>,
  <RelatedArticles />,
  <Ad />,
  <Ad />,
  <Ad />,
]
`;

exports[`3. an article with a video as the lead asset 1`] = `
Array [
  .c0 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

<style>
{
    "IS1": {
      "marginBottom": 0,
    },
  }
</style>

<div>
    <Ad
      className="IS1"
    />
  </div>,
  .c1 {
  padding-left: 10px;
  padding-right: 10px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c3 {
  font-size: 30px;
  color: #1D1D1B;
  margin-bottom: 8px;
  font-family: "TimesModern-Bold";
  font-weight: 400;
  line-height: 30px;
}

.c4 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c5 {
  margin-left: 10px;
  margin-right: 10px;
}

.c6 {
  border-top: 1px solid #DBDBDB;
}

.c7 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c8 {
  margin-bottom: 10px;
}

.c10 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c11 {
  padding-left: 10px;
  padding-right: 10px;
}

.c12 {
  color: #333333;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin-bottom: 25px;
  margin-top: 0;
  display: block;
}

@media (min-width:1024px) {
  .c0 {
    padding-top: 20px;
    margin: 0 auto;
    display: block;
  }
}

@media (min-width:768px) {
  .c1 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 58.33333%;
    margin-bottom: 15px;
  }
}

@media (min-width:1024px) {
  .c2 {
    margin-top: 0px;
  }
}

@media (min-width:768px) {
  .c3 {
    font-size: 45px;
    line-height: 45px;
  }
}

@media (min-width:768px) {
  .c4 {
    width: 83.33333333%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c4 {
    margin-bottom: 20px;
    padding-right: 20px;
    padding-left: 20px;
    position: absolute;
    left: 0;
    width: 20.8333%;
    z-index: 1;
  }
}

@media (min-width:768px) {
  .c5 {
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width:1024px) {
  .c5 {
    padding-top: 0px;
    margin-bottom: 0;
  }
}

@media (min-width:768px) {
  .c6 {
    padding-top: 5px;
    padding-bottom: 5px;
  }
}

@media (min-width:1024px) {
  .c6 {
    line-height: 18px;
    padding-bottom: 25px;
  }
}

@media (min-width:768px) {
  .c8 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: 58.33333%;
    margin: 0 auto;
    padding-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:768px) {
  .c11 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c11 {
    width: 58.33333%;
  }
}

@media (min-width:768px) {
  .c12 {
    font-size: 18px;
    line-height: 30px;
  }
}

<style>
{
    "IS1": {
      "height": "100%",
      "width": "100%",
    },
    "IS2": {
      "height": "100%",
      "width": "100%",
    },
    "IS3": {
      "height": "100%",
      "position": "absolute",
      "width": "100%",
    },
    "IS4": {
      "paddingBottom": "56.25%",
    },
    "IS5": {
      "color": "#333333",
      "fontFamily": "TimesDigitalW04",
      "fontSize": 17,
      "lineHeight": 26,
      "marginBottom": "25px",
      "marginTop": 0,
    },
    "IS6": {
      "paddingLeft": "10px",
      "paddingRight": "10px",
    },
  }
</style>

<div>
    <div>
      <div>
        <div>
          <VideoLabel />
        </div>
        <div>
          Some Headline
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <DatePublication />
          </span>
        </div>
      </div>
    </div>
    <div>
      <div>
        <div
          className="IS4"
        >
          <div
            className="IS3"
          >
            <div
              className="IS2"
            >
              <video
                className="IS1"
              />
            </div>
          </div>
        </div>
        <div>
          <Caption />
        </div>
      </div>
    </div>
    <div>
      <div
        className="IS6"
      >
        <p
          className="IS5"
        >
          Some content
        </p>
      </div>
    </div>
  </div>,
  <Ad />,
  <Ad />,
  <Ad />,
]
`;

exports[`4. an article with no lead asset 1`] = `
Array [
  .c0 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

<style>
{
    "IS1": {
      "marginBottom": 0,
    },
  }
</style>

<div>
    <Ad
      className="IS1"
    />
  </div>,
  .c1 {
  padding-left: 10px;
  padding-right: 10px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c2 {
  font-size: 30px;
  color: #1D1D1B;
  margin-bottom: 8px;
  font-family: "TimesModern-Bold";
  font-weight: 400;
  line-height: 30px;
}

.c3 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  margin-left: 10px;
  margin-right: 10px;
}

.c5 {
  border-top: 1px solid #DBDBDB;
}

.c6 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c7 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c8 {
  padding-left: 10px;
  padding-right: 10px;
}

.c9 {
  color: #333333;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin-bottom: 25px;
  margin-top: 0;
  display: block;
}

@media (min-width:1024px) {
  .c0 {
    padding-top: 20px;
    margin: 0 auto;
    display: block;
  }
}

@media (min-width:768px) {
  .c1 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 58.33333%;
    margin-bottom: 15px;
  }
}

@media (min-width:768px) {
  .c2 {
    font-size: 45px;
    line-height: 45px;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 83.33333333%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c3 {
    margin-bottom: 20px;
    padding-right: 20px;
    padding-left: 20px;
    position: absolute;
    left: 0;
    width: 20.8333%;
    z-index: 1;
  }
}

@media (min-width:768px) {
  .c4 {
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width:1024px) {
  .c4 {
    padding-top: 0px;
    margin-bottom: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 5px;
    padding-bottom: 5px;
  }
}

@media (min-width:1024px) {
  .c5 {
    line-height: 18px;
    padding-bottom: 25px;
  }
}

@media (min-width:768px) {
  .c8 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: 58.33333%;
  }
}

@media (min-width:768px) {
  .c9 {
    font-size: 18px;
    line-height: 30px;
  }
}

<style>
{
    "IS1": {
      "color": "#333333",
      "fontFamily": "TimesDigitalW04",
      "fontSize": 17,
      "lineHeight": 26,
      "marginBottom": "25px",
      "marginTop": 0,
    },
    "IS2": {
      "paddingLeft": "10px",
      "paddingRight": "10px",
    },
  }
</style>

<div>
    <div>
      <div>
        <div>
          Some Headline
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <DatePublication />
          </span>
        </div>
      </div>
    </div>
    <div />
    <div>
      <div
        className="IS2"
      >
        <p
          className="IS1"
        >
          Some content
        </p>
      </div>
    </div>
  </div>,
  <Ad />,
  <Ad />,
  <Ad />,
]
`;

exports[`5. an article with ads 1`] = `
Array [
  .c0 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

<style>
{
    "IS1": {
      "marginBottom": 0,
    },
  }
</style>

<div>
    <Ad
      className="IS1"
    />
  </div>,
  .c1 {
  padding-left: 10px;
  padding-right: 10px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c2 {
  font-size: 30px;
  color: #1D1D1B;
  margin-bottom: 8px;
  font-family: "TimesModern-Bold";
  font-weight: 400;
  line-height: 30px;
}

.c3 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  margin-left: 10px;
  margin-right: 10px;
}

.c5 {
  border-top: 1px solid #DBDBDB;
}

.c6 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c7 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

@media (min-width:1024px) {
  .c0 {
    padding-top: 20px;
    margin: 0 auto;
    display: block;
  }
}

@media (min-width:768px) {
  .c1 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 58.33333%;
    margin-bottom: 15px;
  }
}

@media (min-width:768px) {
  .c2 {
    font-size: 45px;
    line-height: 45px;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 83.33333333%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c3 {
    margin-bottom: 20px;
    padding-right: 20px;
    padding-left: 20px;
    position: absolute;
    left: 0;
    width: 20.8333%;
    z-index: 1;
  }
}

@media (min-width:768px) {
  .c4 {
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width:1024px) {
  .c4 {
    padding-top: 0px;
    margin-bottom: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 5px;
    padding-bottom: 5px;
  }
}

@media (min-width:1024px) {
  .c5 {
    line-height: 18px;
    padding-bottom: 25px;
  }
}

<style>
{
    "IS1": {
      "borderBottomColor": "#DBDBDB",
      "borderBottomWidth": 1,
      "borderTopColor": "#DBDBDB",
      "borderTopWidth": 1,
      "marginBottom": "30px",
      "marginTop": "30px",
      "paddingBottom": "10px",
      "paddingTop": "10px",
    },
  }
</style>

<div>
    <div>
      <div>
        <div>
          Some Headline
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <DatePublication />
          </span>
        </div>
      </div>
    </div>
    <div />
    <div>
      <Ad
        className="IS1"
      />
    </div>
  </div>,
  <Ad />,
  <Ad />,
  <Ad />,
]
`;

exports[`6. a secondary image 1`] = `
Array [
  .c0 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

<style>
{
    "IS1": {
      "marginBottom": 0,
    },
  }
</style>

<div>
    <Ad
      className="IS1"
    />
  </div>,
  .c1 {
  padding-left: 10px;
  padding-right: 10px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c2 {
  font-size: 30px;
  color: #1D1D1B;
  margin-bottom: 8px;
  font-family: "TimesModern-Bold";
  font-weight: 400;
  line-height: 30px;
}

.c3 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  margin-left: 10px;
  margin-right: 10px;
}

.c5 {
  border-top: 1px solid #DBDBDB;
}

.c6 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c7 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c8 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

@media (min-width:1024px) {
  .c0 {
    padding-top: 20px;
    margin: 0 auto;
    display: block;
  }
}

@media (min-width:768px) {
  .c1 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 58.33333%;
    margin-bottom: 15px;
  }
}

@media (min-width:768px) {
  .c2 {
    font-size: 45px;
    line-height: 45px;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 83.33333333%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c3 {
    margin-bottom: 20px;
    padding-right: 20px;
    padding-left: 20px;
    position: absolute;
    left: 0;
    width: 20.8333%;
    z-index: 1;
  }
}

@media (min-width:768px) {
  .c4 {
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width:1024px) {
  .c4 {
    padding-top: 0px;
    margin-bottom: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 5px;
    padding-bottom: 5px;
  }
}

@media (min-width:1024px) {
  .c5 {
    line-height: 18px;
    padding-bottom: 25px;
  }
}

@media (min-width:768px) {
  .c8 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: 58.33333%;
  }
}

<div>
    <div>
      <div>
        <div>
          Some Headline
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <DatePublication />
          </span>
        </div>
      </div>
    </div>
    <div />
    <div>
      <div>
        <ArticleImage />
      </div>
    </div>
  </div>,
  <Ad />,
  <Ad />,
  <Ad />,
]
`;

exports[`7. an inline image 1`] = `
Array [
  .c0 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

<style>
{
    "IS1": {
      "marginBottom": 0,
    },
  }
</style>

<div>
    <Ad
      className="IS1"
    />
  </div>,
  .c1 {
  padding-left: 10px;
  padding-right: 10px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c2 {
  font-size: 30px;
  color: #1D1D1B;
  margin-bottom: 8px;
  font-family: "TimesModern-Bold";
  font-weight: 400;
  line-height: 30px;
}

.c3 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  margin-left: 10px;
  margin-right: 10px;
}

.c5 {
  border-top: 1px solid #DBDBDB;
}

.c6 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c7 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c8 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

@media (min-width:1024px) {
  .c0 {
    padding-top: 20px;
    margin: 0 auto;
    display: block;
  }
}

@media (min-width:768px) {
  .c1 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 58.33333%;
    margin-bottom: 15px;
  }
}

@media (min-width:768px) {
  .c2 {
    font-size: 45px;
    line-height: 45px;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 83.33333333%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c3 {
    margin-bottom: 20px;
    padding-right: 20px;
    padding-left: 20px;
    position: absolute;
    left: 0;
    width: 20.8333%;
    z-index: 1;
  }
}

@media (min-width:768px) {
  .c4 {
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width:1024px) {
  .c4 {
    padding-top: 0px;
    margin-bottom: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 5px;
    padding-bottom: 5px;
  }
}

@media (min-width:1024px) {
  .c5 {
    line-height: 18px;
    padding-bottom: 25px;
  }
}

@media (min-width:768px) {
  .c8 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: 58.33333%;
  }
}

<div>
    <div>
      <div>
        <div>
          Some Headline
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <DatePublication />
          </span>
        </div>
      </div>
    </div>
    <div />
    <div>
      <div>
        <ArticleImage />
      </div>
    </div>
  </div>,
  <Ad />,
  <Ad />,
  <Ad />,
]
`;

exports[`8. an article loading state 1`] = `
<div>
  Loading ...
</div>
`;

exports[`9. an article with updated byline 1`] = `
Array [
  .c0 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

<style>
{
    "IS1": {
      "marginBottom": 0,
    },
  }
</style>

<div>
    <Ad
      className="IS1"
    />
  </div>,
  .c1 {
  padding-left: 10px;
  padding-right: 10px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c2 {
  font-size: 30px;
  color: #1D1D1B;
  margin-bottom: 8px;
  font-family: "TimesModern-Bold";
  font-weight: 400;
  line-height: 30px;
}

.c3 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  margin-left: 10px;
  margin-right: 10px;
}

.c5 {
  border-top: 1px solid #DBDBDB;
}

.c6 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c7 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c8 {
  padding-left: 10px;
  padding-right: 10px;
}

.c9 {
  color: #333333;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin-bottom: 25px;
  margin-top: 0;
  display: block;
}

@media (min-width:1024px) {
  .c0 {
    padding-top: 20px;
    margin: 0 auto;
    display: block;
  }
}

@media (min-width:768px) {
  .c1 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 58.33333%;
    margin-bottom: 15px;
  }
}

@media (min-width:768px) {
  .c2 {
    font-size: 45px;
    line-height: 45px;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 83.33333333%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c3 {
    margin-bottom: 20px;
    padding-right: 20px;
    padding-left: 20px;
    position: absolute;
    left: 0;
    width: 20.8333%;
    z-index: 1;
  }
}

@media (min-width:768px) {
  .c4 {
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width:1024px) {
  .c4 {
    padding-top: 0px;
    margin-bottom: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 5px;
    padding-bottom: 5px;
  }
}

@media (min-width:1024px) {
  .c5 {
    line-height: 18px;
    padding-bottom: 25px;
  }
}

@media (min-width:768px) {
  .c8 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: 58.33333%;
  }
}

@media (min-width:768px) {
  .c9 {
    font-size: 18px;
    line-height: 30px;
  }
}

<style>
{
    "IS1": {
      "color": "#333333",
      "fontFamily": "TimesDigitalW04",
      "fontSize": 17,
      "lineHeight": 26,
      "marginBottom": "25px",
      "marginTop": 0,
    },
    "IS2": {
      "paddingLeft": "10px",
      "paddingRight": "10px",
    },
  }
</style>

<div>
    <div>
      <div>
        <div>
          Some Headline
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <DatePublication />
          </span>
        </div>
      </div>
    </div>
    <div />
    <div>
      <div
        className="IS2"
      >
        <p
          className="IS1"
        >
          Some content
        </p>
      </div>
    </div>
  </div>,
  <Ad />,
  <Ad />,
  <Ad />,
]
`;

exports[`9. an article with updated byline 2`] = `
Array [
  .c0 {
  display: none;
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

<style>
{
    "IS1": {
      "marginBottom": 0,
    },
  }
</style>

<div>
    <Ad
      className="IS1"
    />
  </div>,
  .c1 {
  padding-left: 10px;
  padding-right: 10px;
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c2 {
  font-size: 30px;
  color: #1D1D1B;
  margin-bottom: 8px;
  font-family: "TimesModern-Bold";
  font-weight: 400;
  line-height: 30px;
}

.c3 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c4 {
  margin-left: 10px;
  margin-right: 10px;
}

.c5 {
  border-top: 1px solid #DBDBDB;
}

.c6 {
  -webkit-order: 1;
  -ms-flex-order: 1;
  order: 1;
}

.c7 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c8 {
  padding-left: 10px;
  padding-right: 10px;
}

.c9 {
  color: #333333;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin-bottom: 25px;
  margin-top: 0;
  display: block;
}

@media (min-width:1024px) {
  .c0 {
    padding-top: 20px;
    margin: 0 auto;
    display: block;
  }
}

@media (min-width:768px) {
  .c1 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c1 {
    width: 58.33333%;
    margin-bottom: 15px;
  }
}

@media (min-width:768px) {
  .c2 {
    font-size: 45px;
    line-height: 45px;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 83.33333333%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c3 {
    margin-bottom: 20px;
    padding-right: 20px;
    padding-left: 20px;
    position: absolute;
    left: 0;
    width: 20.8333%;
    z-index: 1;
  }
}

@media (min-width:768px) {
  .c4 {
    margin-left: 0;
    margin-right: 0;
  }
}

@media (min-width:1024px) {
  .c4 {
    padding-top: 0px;
    margin-bottom: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 5px;
    padding-bottom: 5px;
  }
}

@media (min-width:1024px) {
  .c5 {
    line-height: 18px;
    padding-bottom: 25px;
  }
}

@media (min-width:768px) {
  .c8 {
    width: 83.33333333%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c8 {
    width: 58.33333%;
  }
}

@media (min-width:768px) {
  .c9 {
    font-size: 18px;
    line-height: 30px;
  }
}

<style>
{
    "IS1": {
      "color": "#333333",
      "fontFamily": "TimesDigitalW04",
      "fontSize": 17,
      "lineHeight": 26,
      "marginBottom": "25px",
      "marginTop": 0,
    },
    "IS2": {
      "paddingLeft": "10px",
      "paddingRight": "10px",
    },
  }
</style>

<div>
    <div>
      <div>
        <div>
          Some Headline
        </div>
      </div>
    </div>
    <div>
      <div>
        <div>
          <span>
            <ArticleBylineWithLinks />
          </span>
        </div>
        <div>
          <span>
            <DatePublication />
          </span>
        </div>
      </div>
    </div>
    <div />
    <div>
      <div
        className="IS2"
      >
        <p
          className="IS1"
        >
          Some content
        </p>
      </div>
    </div>
  </div>,
  <Ad />,
  <Ad />,
  <Ad />,
]
`;
